--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,17 @@ header {
     height: 200px;
     width: 100%;
     background: rgb(241, 32, 8);
-    margin-bottom: 5px;
+    margin-bottom: 0;
+    
+}
+.container-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.logo {
+    position: absolute;
+    top: 50px;
+    left: 70px;
 }
 #main {
     height: 2700px;
@@ -15,8 +25,82 @@ header {
 }
 .featured-articles-container {
     display: grid;
+    grid-template-columns: 1fr 1fr;
 }
-
+#featured-articles-heading {
+    position: absolute;
+    left: 470px;
+    width: 400px;
+    text-align: center;
+    background: white;
+    color: black;
+    font-weight: bold;
+    text-transform: capitalize;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.article-container {
+    position: relative;
+    top: 150px;
+    left: 60px;
+    height: 550px;
+    width: 90%;
+    color: white;
+}
+.name {
+    position: relative;
+    top: -30px;
+    left: 30px;
+    font-size: 25px;
+    font-weight: bold;
+    font-family: monospace;
+}
+.wrote {
+    position: relative;
+    top: -30px;
+    left: 35px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.4em;
+    font-style: italic;
+}
+.desc {
+    position: relative;
+    top: 40px;
+    font-size: 47px;
+    font-weight: bolder;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.icon-comment {
+    position: relative;
+    top: 60px;
+    font-weight: bold;
+}
+.hash-container {
+    position: relative;
+    top: 120px;
+    font-weight: bolder;
+    font-size: 20px;
+}
+b {
+    color: black;
+}
+.arrow-container {
+    position: relative;
+    top: 100px;
+}
+#arrow:hover {
+    cursor: pointer;
+}
+#art-pos{
+    position: absolute;
+    left: 110px;
+    background: white;
+    width: 180px;
+    text-transform: capitalize;
+}
+.featured-article {
+    border: 1px solid rgba(156, 133, 133, 0.473);
+    height: 700px;
+}
 footer {
     height: 700px;
     width: 100%;
