wrapped the article container with the anchor tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,9 @@ b {
 #arrow:hover {
     cursor: pointer;
 }
+.anchor-wrap {
+    text-decoration: none;
+}
 #art-pos{
     position: absolute;
     left: 110px;
