--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 #home {
     overflow-x: hidden;
-    background: #c0c0c0;
+    background: white;
 }
 header {
     height: 200px;
@@ -119,7 +119,7 @@ header {
     position: relative;
     height: auto;
     width: 100%;
-    background: rgba(119, 122, 122, 0.432);
+    background: white;
 }
 .featured-articles-container {
     display: grid;
@@ -205,7 +205,7 @@ b {
 .col-4 {
     height: 640px;
     max-width: 450px;
-    background: #c0c0c0;
+    background: white;
     text-align: left;
 }
 .section-para {
@@ -252,7 +252,7 @@ time {
 }
 
 .section-h4, .section-h4 > a {
-    color: #808080;
+    color:white;
     font-weight: bolder;
     font-size: 18px;
 }
@@ -290,7 +290,7 @@ time {
     grid-template-columns: 3fr 5fr;
     height: 700px;
     width: 100%;
-    background: #c0c0c0;
+    background: white;
 }
 
 .four-container {
@@ -337,8 +337,40 @@ time {
 }
 .explore > a:hover {
     background: white;
-    
     color: black;
+}
+.explore-one {
+    position: relative;
+    left: 420px;
+    top: 80px;
+    height: 50px;
+    width: 500px;
+    color: blue;
+    background: white;
+    font-size: 1em;
+    border-radius: 10px;
+}
+#center-tag {
+    color: white;
+    position: relative;
+    top: 10%;
+    left: 20%;
+    width: 60%;
+}
+.word {
+    font-size: 1.6em;
+    font-family: serif;
+    text-align: center;
+}
+#explore {
+    position: relative;
+    top: 20%;
+    left: 20%;
+    font-size: 1.5em;
+    color: blue;
+    background: white;
+    text-decoration: none;
+    font-family: sans-serif;
 }
 .jump-stack{
     display: grid;
@@ -350,7 +382,6 @@ time {
 .top-im {
     height: 100%;
     width: 100%;
-    border: 1px solid black;
 }
 .icon-cont {
     position: relative;   
@@ -379,6 +410,10 @@ time {
     position: relative;
     left: 500px;
 }
+.all-articles:hover {
+    cursor: pointer;
+    color: red;
+}
 #line {
     width: 200px;
     border: 3px solid red;
@@ -406,6 +441,184 @@ time {
 .im-cont {
     position: relative;
     left: 10%;
+}
+.community-links {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    height: auto;
+    background: white;
+}
+.img-comm-cont {
+    border: 5px solid red;
+    height: 250px;
+    width: 250px;
+    border-radius: 5px;
+    transform: rotate(340deg);
+}
+.main-community {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 10px;
+    margin-left: 40px;
+    margin-top: 60px;
+}
+.rotate-img{
+    position: relative;
+    transform: rotate(350deg);
+    border: 8px solid red;
+    border-radius: 5px;
+    box-shadow: 50px black;
+}
+.des-head {
+    margin-right: 20px;
+}
+.des-head > span {
+    font-size: 1.3em;
+}
+.others-comm {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.other-comm-article1 {
+    height: 300px;
+    box-sizing: border-box;
+}
+.other-comm-article{
+    height: 300px;
+    box-sizing: border-box;
+}
+.other-comm-article > p {
+    width: 90%;
+    box-sizing: border-box;
+    padding-left: 15%;
+}
+.other-comm-article1 > p {
+    width: 90%;
+    box-sizing: border-box;
+    padding-left: 15%;
+    font-size: 1.3em;
+}
+#my-fig {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+#other-img {
+    height: 100px;
+    width: 100px;
+    border: 3px solid red;
+    transform: rotate(350deg);
+}
+figcaption > span {
+    color: gray;
+    font-size: 1.4em;
+}
+figcaption > h3 {
+    font-size: 1.5em;
+    color: gray;
+}
+p > time {
+    font-size: 1.4em;
+    padding-right: 50px;
+}
+.other-comm-article > p {
+    position: relative;
+    margin-left: 30px;
+    font-size: 1.3em;
+}
+.more-liks-twitter {
+    position: relative;
+    margin-bottom: 10px;
+    margin-left: 550px;
+}
+.more-liks-twitter:hover {
+    cursor: pointer;
+    color: red;
+}
+#hori {
+    border: 3px solid red;
+    width: 145px;
+}
+.design-systems {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    height: 550px;
+    background: white;
+}
+#design-systems-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 10px;
+    background: deeppink;
+    align-self: center;
+    width: 100%;
+    height: 400px;
+}
+#main-design {
+    color: white;
+    width: 80%;
+    position: relative;
+    left: 80px;
+    text-align: left;
+}
+#design-sys {
+    font-size: 2.8em;
+}
+#bar {
+    position: relative;
+    top: -40px;
+    border: 2px solid gray;
+    width: 300px;
+}
+#control {
+    position: relative;
+    top: 10px;
+}
+#old-bold {
+    position: relative;
+    top: 20px;
+    color: white;
+    font-weight: 500px;
+    font-size: 1.3em;
+}
+#design-desc {
+    font-size: 1.4em;
+}
+#t-b-contents {
+    position: relative;
+    top: 20px;
+    height: 60px;
+    width: 200px;
+    text-align: center;
+    align-self: center;
+    border-radius: 5px;
+    background: white;
+    color: blue;
+}
+#t-b-contents  > span {
+    position: relative;
+    top: 20px;
+    text-transform: capitalize;
+    font-size: 1.4em;
+}
+#cent-head {
+    color: grey;
+}
+#feat-sys {
+    position: relative;
+    top: 20px;
+    font-family: serif;
+    font-size: 1.4em;
+}
+#logo-design {
+    width: 100%;
+}
+#des-log-img {
+    position: relative;
+    top: -40px;
+    left: 40px;
+    transform: rotate(-10deg);
 }
 #myfooter {
     height: 700px;
