--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@ header {
     background: #d33a2c;
     margin-bottom: 0;
 }
+
 .logo {
-    position: absolute;
     top: 50px;
     left: 10px;
 }
@@ -35,7 +35,6 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
-    position: relative;
     left: 80px;
     top: 30px;
     height: 30px;
@@ -50,7 +49,6 @@ header {
     height: 20px;
     padding: 10px;
     border: 3px solid white;
-    position: absolute;
     top: 50px;
     right: 20px;
     border-radius: 5px;
@@ -72,7 +70,6 @@ header {
     font-family: 'Courier New', Courier, monospace;
 }
 .img-art-head {
-    position: relative;
     left: 60px;
 }
 .img-art-head:hover {
@@ -84,25 +81,21 @@ header {
     font-size: 17px;
 }
 .art-head2 {
-    position: absolute;
     top: 50px;
     left: 450px;
     color: white;
 }
 .art-head3 {
-    position: absolute;
     top: 50px;
     left: 640px;
     color: white;
 }
 .art-head4 {
-    position: absolute;
     top: 50px;
     left: 840px;
     color: white;
 }
 .art-head5 {
-    position: absolute;
     top: 50px;
     left: 1010px;
     color: white;
@@ -112,7 +105,6 @@ header {
     cursor: pointer;
 }
 .topics {
-    position: relative;
     left: 10px;
     font-size: 19px;
     font-weight: bolder;
@@ -122,7 +114,6 @@ header {
     cursor: pointer;
 }
 #main {
-    position: relative;
     height: auto;
     width: 100%;
     background: white;
@@ -132,7 +123,6 @@ header {
     grid-template-columns: 1fr 1fr;
 }
 #featured-articles-heading {
-    position: absolute;
     left: 450px;
     width: 400px;
     text-align: center;
@@ -143,7 +133,6 @@ header {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .article-container {
-    position: relative;
     top: 150px;
     left: 60px;
     height: 550px;
@@ -151,7 +140,6 @@ header {
     color: white;
 }
 .name {
-    position: relative;
     top: -30px;
     left: 30px;
     font-size: 25px;
@@ -159,7 +147,6 @@ header {
     font-family: monospace;
 }
 .wrote {
-    position: relative;
     top: -30px;
     left: 35px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -167,7 +154,6 @@ header {
     font-style: italic;
 }
 .desc {
-    position: relative;
     top: 40px;
     font-size: 47px;
     font-weight: bolder;
@@ -175,12 +161,10 @@ header {
     text-transform: capitalize;
 }
 .icon-comment {
-    position: relative;
     top: 60px;
     font-weight: bold;
 }
 .hash-container {
-    position: relative;
     top: 120px;
     font-weight: bolder;
     font-size: 20px;
@@ -189,14 +173,12 @@ b {
     color: black;
 }
 .arrow-container {
-    position: relative;
     top: 100px;
 }
 #arrow:hover {
     cursor: pointer;
 }
 #arrow {
-    position: relative;
     top: 50%;
     left: 50%;
 }
@@ -208,12 +190,12 @@ b {
     grid-template-columns: 1fr 1fr 1fr;
     
 }
+
 .seriously {
     height: 40px;
     width: 180px;
     border: 1px solid white;
     background: #bc3428;
-    position: absolute;
     top: 30px;
     right: 50px;
     border-radius: 20px;
@@ -231,14 +213,12 @@ b {
     height: 45px;
     width: 50px;
     border: 1px solid white;
-    position: absolute;
     top: 30px;
     right: 250px;
     transform: rotate(350deg);
     background: #fff;
 }
 .inner-cir {
-    position: relative;
     left: 20px;
     top: 15px;
     width: 45px;
@@ -253,7 +233,6 @@ b {
     text-align: left;
 }
 .section-para {
-    position: relative;
     box-sizing: border-box;
     left: 0;
     width: 100%;
@@ -261,7 +240,6 @@ b {
     padding: 30px;
 }
 .col-4 > .section-container {
-    position: relative;
     overflow-wrap: break-word;
     word-wrap: break-word;
     hyphens: auto;
@@ -270,17 +248,15 @@ b {
     left: -10px;
 }
 time {
-    position: relative;
     left: 50px;
     color: #808080;
     font-size: 17px;
 }
 .section-a {
-    position: relative;
     left: 50px;
+    text-decoration-color: black;
 }
 .head-a- {
-    position: relative;
     left: 50px;
     color: #666;
 }
@@ -288,8 +264,8 @@ time {
     color: #666;
     font-weight: 500;
 }
+
 #art-pos{
-    position: absolute;
     left: 110px;
     background: white;
     width: 180px;
@@ -309,11 +285,8 @@ time {
     word-wrap: break-word;
     color: black;
 }
-.section-a {
-    text-decoration-color: black;
-}
+
 .sec-arrow-container {
-    position: relative;
     left: 50px;
     color: red;
     align-content: center;
@@ -322,13 +295,11 @@ time {
     background: white;
 }
 .sec-arrow-container1 {
-    position: relative;
     left: 50px;
     top: 50px;
     color: red;
 }
 .sec-arrow-container2 {
-    position: relative;
     left: 50px;
     top: 50px;
     color: red;
@@ -360,7 +331,6 @@ time {
     font-size: 1.4em;
 }
 .four-container {
-    position: relative;
     left: 10px;
     width: 100%;
     height: 80%;
@@ -372,7 +342,6 @@ time {
     border-radius: 10px;
 }
 .con {
-    position: relative;
     left: 10%;
     top: 40px;
     width: 80%;
@@ -382,11 +351,9 @@ time {
     text-align: center;
 }
 .four-head {
-    position: relative;
     left: 20px;
 }
 .explore {
-    position: relative;
     left: 25%;
     top: 30%;
     width: 50%;
@@ -396,7 +363,6 @@ time {
 }
 .explore > a {
     text-decoration: none;
-    position: relative;
     top: 10%;
     color: white;
     font-size: 20px;
@@ -406,7 +372,6 @@ time {
     color: black;
 }
 .explore-one {
-    position: relative;
     left: 420px;
     top: 80px;
     height: 50px;
@@ -418,7 +383,6 @@ time {
 }
 #center-tag {
     color: white;
-    position: relative;
     top: 10%;
     left: 20%;
     width: 60%;
@@ -429,7 +393,6 @@ time {
     text-align: center;
 }
 #explore {
-    position: relative;
     top: 20%;
     left: 20%;
     font-size: 1.5em;
@@ -449,9 +412,7 @@ time {
     height: 100%;
     width: 100%;
 }
-.icon-cont {
-    position: relative;   
-}
+
 .icon-cont > p {
     text-align: center;
     color: white;
@@ -463,7 +424,6 @@ time {
     color: white;
 }
 .icon-cont > .sign-in {
-    position: relative;
     bottom: -100px;
     text-align: center;
     color: white;
@@ -473,7 +433,6 @@ time {
     text-decoration: none;
 }
 .all-articles {
-    position: relative;
     left: 500px;
 }
 .all-articles:hover {
@@ -485,7 +444,6 @@ time {
     border: 3px solid red;
 }
 .icon-cont > .upcoming-epi {
-    position: relative;
     bottom: -40px;
     left: 220px;
     text-align: center;
@@ -506,18 +464,88 @@ time {
     text-decoration: none;
     font-weight: bold;
 }
-.upcoming-epi > span {
+/* DRY CODE HERE => */
+.logo,
+.topics-icon,
+.art-head2,
+.art-head3,
+.art-head4,
+.art-head5,
+#featured-articles-heading,
+.seriously,
+.seri-icon,
+#art-pos {
+    position: absolute;
+}
+.wrapper-a,
+.img-art-head,
+.topics,
+#main,
+.article-container,
+.name,
+.wrote ,
+.desc,
+.icon-comment,
+.hash-container,
+.arrow-container,
+#arrow,
+.inner-cir,
+.section-para,
+.col-4 > .section-container,
+time,
+.section-a,
+.head-a-,
+.sec-arrow-container,
+.sec-arrow-container1,
+.sec-arrow-container2,
+.four-container,
+.con,
+.four-head,
+.explore,
+.explore > a,
+.explore-one,
+#center-tag,
+#explore,
+.icon-cont,
+.icon-cont > .sign-in,
+.all-articles,
+.icon-cont > .upcoming-epi,
+.upcoming-epi > span,
+.icon-cont > img,
+.im-cont,
+.rotate-img,
+.other-comm-article > p,
+.more-liks-twitter,
+#main-design,
+#bar,
+#control,
+#old-bold,
+#t-b-contents,
+#t-b-contents  > span,
+#feat-sys,
+#des-log-img,
+#continue-curated-post > #cont,
+#continue-icon > #cont,
+#input-subscribe,
+#space-white,
+.bar,
+#footer-container,
+#browse-smash-magazine,
+#footer-notes,
+.footer-links,
+#ul-container,
+.my-cont  {
     position: relative;
+}
+.upcoming-epi > span {
     top: 20%;
     font-size: 1.5em;
 }
 .icon-cont > img {
-    position: relative;
     top: 20px;
     left: 25%;  
 }
 .im-cont {
-    position: relative;
     left: 10%;
 }
 .community-links {
@@ -542,7 +570,6 @@ time {
     margin-top: 60px;
 }
 .rotate-img{
-    position: relative;
     transform: rotate(350deg);
     border: 8px solid red;
     border-radius: 5px;
@@ -570,6 +597,8 @@ time {
     width: 90%;
     box-sizing: border-box;
     padding-left: 15%;
+    margin-left: 30px;
+    font-size: 1.3em;
 }
 .other-comm-article1 > p {
     width: 90%;
@@ -599,13 +628,8 @@ p > time {
     font-size: 1.4em;
     padding-right: 50px;
 }
-.other-comm-article > p {
-    position: relative;
-    margin-left: 30px;
-    font-size: 1.3em;
-}
+
 .more-liks-twitter {
-    position: relative;
     margin-bottom: 10px;
     margin-left: 550px;
 }
@@ -636,7 +660,6 @@ p > time {
 #main-design {
     color: white;
     width: 80%;
-    position: relative;
     left: 80px;
     text-align: left;
 }
@@ -644,17 +667,14 @@ p > time {
     font-size: 2.8em;
 }
 #bar {
-    position: relative;
     top: -40px;
     border: 2px solid gray;
     width: 300px;
 }
 #control {
-    position: relative;
     top: 10px;
 }
 #old-bold {
-    position: relative;
     top: 20px;
     color: white;
     font-weight: 500px;
@@ -664,7 +684,6 @@ p > time {
     font-size: 1.4em;
 }
 #t-b-contents {
-    position: relative;
     top: 20px;
     height: 60px;
     width: 200px;
@@ -675,7 +694,6 @@ p > time {
     color: blue;
 }
 #t-b-contents  > span {
-    position: relative;
     top: 20px;
     text-transform: capitalize;
     font-size: 1.4em;
@@ -684,7 +702,6 @@ p > time {
     color: gray ;
 }
 #feat-sys {
-    position: relative;
     top: 20px;
     font-family: serif;
     font-size: 1.4em;
@@ -693,7 +710,6 @@ p > time {
     width: 100%;
 }
 #des-log-img {
-    position: relative;
     top: -40px;
     left: 40px;
     transform: rotate(-10deg);
@@ -735,7 +751,6 @@ p > time {
     width: 100%;
 }
 #continue-curated-post > #cont {
-    position: relative;
     left: 10%;
     width: 80%;
     height: 100%;
@@ -745,7 +760,6 @@ p > time {
     width: 100%;   
 }
 #continue-icon > #cont {
-    position: relative;
     left: 10%;
     width: 80%;
     height: 97.3%;
@@ -762,7 +776,6 @@ p > time {
     width: 100%;
 }
 #input-subscribe {
-    position: relative;
     left: 150px;
     height: 50px;
     width: 60%;
@@ -785,25 +798,21 @@ p > time {
 }
 #space-white {
     text-align: center;
-    position: relative;
     top: 150px;
     font-size: 1.6em;
 }
 .bar {
     border: 3px solid red;
     width: 160px;
-    position: relative;
     left: 560px;
 }
 #footer-container {
-    position: relative;
     left: 5%;
     width: 90%;
     height: 100%;
     background: #d33a2c;
 }
 #browse-smash-magazine {
-    position: relative;
     top: 60px;
     color: #fff;
     font-weight: bold;
@@ -811,14 +820,12 @@ p > time {
     font-size: 1.5em;
 }
 #footer-notes {
-    position: relative;
     top: 150px;
     text-align: center;
     color: #fff;
     font-size: 1.4em;
 }
 .footer-links {
-    position: relative;
     top: 170px;
     margin: 0 auto;
     padding: 1em 0;
@@ -841,7 +848,6 @@ p > time {
 }
 
 #ul-container {
-    position: relative;
     top: 100px;
     display: inline-block;
     font-size: 1.6em;
@@ -862,7 +868,6 @@ p > time {
     color: #fff;
 }
 .my-cont {
-    position: relative;
     top: 50px;
 }
 #myfooter {
