--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,7 @@ header {
     margin-bottom: 0;
 }
 
-.logo {
-    top: 50px;
-    left: 10px;
-}
+
 .soft {
     background: #c7372a;
 }
@@ -33,16 +30,46 @@ header {
 }
 .wrapper-a {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
-    left: 80px;
-    top: 30px;
     height: 30px;
     width: 100%;
 }
 .wrapper-a > a {
     text-decoration: none;
     color: white;
+}
+.container-s > a,
+.container-t > a,
+.container-f > a,
+.container-fv > a,
+.container-si > a,
+.container-sv > a {
+    text-decoration: none;
+    color: #fff;
+}
+.container-s > a > .art-head > .img-art-head,
+.container-t > a > .art-head > .img-art-head,
+.container-f > a > .art-head > .img-art-head,
+.container-fv > a > .art-head > .img-art-head,
+.container-si > a > .art-head > .img-art-head,
+.container-sv > a > .art-head > .img-art-head {
+    position: relative;
+    left: 5px;
+    transform: rotate(350deg);
+}
+.container-s > a > .art-head > .img-art-head:hover,
+.container-t > a > .art-head > .img-art-head:hover,
+.container-f > a > .art-head > .img-art-head:hover,
+.container-fv > a > .art-head > .img-art-head:hover,
+.container-si > a > .art-head > .img-art-head:hover,
+.container-sv > a > .art-head > .img-art-head:hover {
+    transform: rotate(0deg);
+}
+.container-header {
+    top: 50px;
+    text-align: center;
+    align-items: center;
 }
 .topics-icon {
     width: 100px;
@@ -55,23 +82,13 @@ header {
     color: white;
     font-size: 16px;
 }
-.container-header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-.art-head {
-    width: 200px;
-    color: white;
-}
 .head-art{
     text-align: center;
     font-size: 24px;
     font-weight: bolder;
     font-family: 'Courier New', Courier, monospace;
 }
-.img-art-head {
-    left: 60px;
-}
+
 .img-art-head:hover {
     -ms-transform: rotate(20deg); /* IE 9 */
     -webkit-transform: rotate(20deg); /* Safari 3-8 */
@@ -140,15 +157,22 @@ header {
     color: white;
 }
 .name {
-    top: -30px;
-    left: 30px;
+    top: -80px;
+    left: 100px;
     font-size: 25px;
     font-weight: bold;
     font-family: monospace;
 }
 .wrote {
-    top: -30px;
-    left: 35px;
+    top: -127px;
+    left: 290px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.4em;
+    font-style: italic;
+}
+.wrote-unique {
+    top: -128px;
+    left: 320px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.4em;
     font-style: italic;
@@ -188,7 +212,7 @@ b {
 .latest-post {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    
+
 }
 
 .seriously {
@@ -247,10 +271,9 @@ b {
     top: 60px;
     left: -10px;
 }
-time {
-    left: 50px;
-    color: #808080;
-    font-size: 17px;
+.time-new {
+    font-size: .8em;
+    color: #666;
 }
 .section-a {
     left: 50px;
@@ -312,9 +335,11 @@ time {
     background: white;
 }
 .comig-up {
+    text-align: center;
     font-size: 1.2em;
 }
 .desc-header {
+    text-align: center;
     font-size: 2.1em;
 }
 .dark-ul > li {
@@ -324,7 +349,7 @@ time {
     color: red;
 }
 .desc-header > a {
-    color: #fff;   
+    color: #fff;
 }
 #sign {
     color: #fff;
@@ -359,7 +384,7 @@ time {
     width: 50%;
     height: 30px;
     background: red;
-    border-radius: 50px; 
+    border-radius: 50px;
 }
 .explore > a {
     text-decoration: none;
@@ -465,25 +490,20 @@ time {
     font-weight: bold;
 }
 /* DRY CODE HERE => */
-.logo,
-.topics-icon,
-.art-head2,
-.art-head3,
-.art-head4,
-.art-head5,
+
 #featured-articles-heading,
 .seriously,
 .seri-icon,
 #art-pos {
     position: absolute;
 }
-.wrapper-a,
 .img-art-head,
 .topics,
 #main,
 .article-container,
 .name,
-.wrote ,
+.wrote,
+.wrote-unique,
 .desc,
 .icon-comment,
 .hash-container,
@@ -534,8 +554,19 @@ time,
 #footer-notes,
 .footer-links,
 #ul-container,
-.my-cont  {
+.container-header,
+.my-cont,
+.unique,
+.time-new {
     position: relative;
+}
+.unique {
+    top: 70px;
+}
+.time-new {
+    left: 50px;
+    color: #808080;
+    font-size: 17px;
 }
 .upcoming-epi > span {
     top: 20%;
@@ -543,7 +574,7 @@ time,
 }
 .icon-cont > img {
     top: 20px;
-    left: 25%;  
+    left: 25%;
 }
 .im-cont {
     left: 10%;
@@ -624,11 +655,14 @@ figcaption > h3 {
     font-size: 1.5em;
     color: gray;
 }
-p > time {
-    font-size: 1.4em;
-    padding-right: 50px;
+p > .time {
+    font-size: .9em;
+    padding-right: 10px;
+    color: #666;
 }
-
+.article-rotate-img {
+    transform: rotate(-10deg);
+}
 .more-liks-twitter {
     margin-bottom: 10px;
     margin-left: 550px;
@@ -757,7 +791,7 @@ p > time {
 }
 #continue-icon {
     height: 800px;
-    width: 100%;   
+    width: 100%;
 }
 #continue-icon > #cont {
     left: 10%;
@@ -766,7 +800,7 @@ p > time {
     text-align: center;
     background: #d33a2c;
     color: white;
-    border-radius: 10px; 
+    border-radius: 10px;
 }
 #imagine {
     font-size: 1.4em;
@@ -858,7 +892,7 @@ p > time {
 }
 #ul-container > li > a:hover {
     color: black;
-} 
+}
 #my-cont {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
