applied list style property on all list item

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -918,6 +918,9 @@ p > .time {
     max-width: 30em;
     font-size: 1.4em;
 }
+li {
+    list-style: none;
+}
 .footer-links > li{
     text-decoration: none;
     float: left;
